# pymillis

./: Makefile  README.md  pyproject.toml  setup.py
pyms/: __init__.py  _version.py  ms.py
requirements/: dev.in  dev.txt
tests/: __init__.py  test_format.py  test_index.py  test_parse.py  test_parse_strict.py
