[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyms"
version = "1.0.0"
description = "Milliseconds conversion utility - Python port of the popular JavaScript ms library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["time", "milliseconds", "ms", "duration", "conversion"]
authors = [
    {name = "wudi", email = "wuchendi96@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://github.com/WuChenDi"
"Bug Reports" = "https://github.com/WuChenDi/pyms/issues"
"Source" = "https://github.com/WuChenDi/pyms"

[tool.setuptools.packages.find]
include = ["pyms*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
